--- a/src/page/ui/ChallengeSwiper/ChallengeSwiper.css
+++ b/src/page/ui/ChallengeSwiper/ChallengeSwiper.css
@@ -26,8 +26,9 @@
     right: 0;
     bottom: 0;
     background: rgba(0, 0, 0, 0.3);
-    border-radius: 30px !important;
+    border-radius: 30px;
 }
+
 .swiper-slide img {
     position: absolute;
     left: 0;
@@ -36,7 +37,7 @@
     height: 100%;
     object-fit: cover;
     object-position: center;
-    border-radius: 30px !important;
+    border-radius: 30px;
 }
 
 .swiper-button-prev,
@@ -44,7 +45,7 @@
     position: absolute;
     height: 50px;
     width: 50px;
-    background: rgba(255, 254, 254, 0.2);
+    background: rgba(255, 255, 255, 0.2);
     border-radius: 50%;
     backdrop-filter: blur(20px);
     bottom: 0 !important;
@@ -62,6 +63,7 @@
     z-index: 1000;
     width: 60%;
 }
+
 .gameSlider .content h2 {
     color: white;
     font-family: 'Bauhaus 93', serif;
@@ -79,16 +81,24 @@
     gap: 20px;
 }
 
-.gameSlider .content .buttons a {
-    text-decoration: none;
-    color: #ffffff;
+.gameSlider .content .buttons .orderBtn {
+    background: #17dbef;
+    border: none;
+    padding: 10px 26px;
+    border-radius: 9999px;
+    color: white;
+    font-weight: bold;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
     text-transform: uppercase;
+/*    box-shadow: 0 4px 14px rgba(255, 75, 43, 0.4);*/
 }
 
-.gameSlider .content .buttons .orderBtn {
-    padding: 8px 20px;
-    background: var(--second);
-    border-radius: 10px;
+.gameSlider .content .buttons .orderBtn:hover {
+    transform: scale(1.05);
+    background: #e61b39;
+    /*box-shadow: 0 6px 20px rgba(255, 75, 43, 0.5);*/
 }
 
 .gameSlider .content .buttons .playBtn {
@@ -101,4 +111,5 @@
     justify-content: center;
     align-items: center;
     font-size: 2.5rem;
+    color: #fff;
 }
