--- a/src/page/ui/ChallengeSwiper/ChallengeSwiper.css
+++ b/src/page/ui/ChallengeSwiper/ChallengeSwiper.css
@@ -8,6 +8,39 @@
     height: 350px;
 }
 
+@media screen and (max-width: 768px) {
+    .swiper-slide {
+        width: 300px;
+        height: 200px;
+    }
+
+    .gameSlider .content {
+        width: 90%;
+        bottom: 10px;
+    }
+
+    .gameSlider .content h2 {
+        font-size: 2rem;
+    }
+    .gameSlider .content h3 {
+        font-size: 2rem;
+    }
+
+    .gameSlider .content p {
+        font-size: 0.7rem;
+    }
+
+    .gameSlider .content .buttons {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .gameSlider .content .buttons .orderBtn {
+        font-size: 0.8rem;
+        padding: 8px 20px;
+    }
+}
+
 .gameSlider {
     position: relative;
     width: 100%;
@@ -70,6 +103,12 @@
     font-size: 3.5rem;
 }
 
+.gameSlider .content h3 {
+    color: white;
+    font-family: 'Bauhaus 93', serif;
+    font-size: 2.5rem;
+}
+
 .gameSlider .content p {
     color: #ebebeb;
     font-size: 0.8rem;
@@ -92,13 +131,11 @@
     cursor: pointer;
     transition: all 0.3s ease;
     text-transform: uppercase;
-/*    box-shadow: 0 4px 14px rgba(255, 75, 43, 0.4);*/
 }
 
 .gameSlider .content .buttons .orderBtn:hover {
     transform: scale(1.05);
     background: #e61b39;
-    /*box-shadow: 0 6px 20px rgba(255, 75, 43, 0.5);*/
 }
 
 .gameSlider .content .buttons .playBtn {
